add two section

--- a/index.html
+++ b/index.html
@@ -76,35 +76,102 @@
 					 <div role="tabpanel" class="tab-pane fade in active" id="all">
 					    <div class="portfolio-image">
 							<img src="image/banks.png" alt="banks">
+					    	<div class="overlay">
+						    	<span class="overlay-text">Project Title</span>
+						    	<a href="#">
+						    	<span class="overlay-button">View Project</span>
+						    	</a>	
+					    	</div>
 						</div>
+
 						<div class="portfolio-image">
 							<img src="image/adress.png" alt="adress">
+							<div class="overlay">
+						    	<span class="overlay-text">Project Title</span>
+						    	<a href="#">
+						    	<span class="overlay-button">View Project</span>
+						    	</a>	
+					    	</div>
 						</div>
 						<div class="portfolio-image">
 							<img src="image/kitchen1.png" alt="kitchen1">
+							<div class="overlay">
+						    	<span class="overlay-text">Project Title</span>
+						    	<a href="#">
+						    	<span class="overlay-button">View Project</span>
+						    	</a>	
+					    	</div>
 						</div>
 						<div class="portfolio-image">
 							<img src="image/heading.png" alt="heading">
+							<div class="overlay">
+						    	<span class="overlay-text">Project Title</span>
+						    	<a href="#">
+						    	<span class="overlay-button">View Project</span>
+						    	</a>	
+					    	</div>
 						</div>
 						<div class="portfolio-image">
 							<img src="image/350org.png" alt="350org">
+							<div class="overlay">
+						    	<span class="overlay-text">Project Title</span>
+						    	<a href="#">
+						    	<span class="overlay-button">View Project</span>
+						    	</a>	
+					    	</div>
 						</div>
 						<div class="portfolio-image">
 							<img src="image/take-action.png" alt="take-action">
+							<div class="overlay">
+						    	<span class="overlay-text">Project Title</span>
+						    	<a href="#">
+						    	<span class="overlay-button">View Project</span>
+						    	</a>	
+					    	</div>
 						</div>
 					</div>
-
-
-
-
-
-
-					  <div role="tabpanel" class="tab-pane fade" id="design">...</div>
-					  <div role="tabpanel" class="tab-pane fade" id="web">...</div>
-					  <div role="tabpanel" class="tab-pane fade" id="illustration">...</div>
-					  <div role="tabpanel" class="tab-pane fade" id="motion">...</div>
+					 	<div role="tabpanel" class="tab-pane fade" id="design">
+					  		<img src="image/heading.png" alt="heading">
+					  	</div>
+					  	<div role="tabpanel" class="tab-pane fade" id="web">
+					  		<img src="image/adress.png" alt="adress">
+					 	</div>
+					  	<div role="tabpanel" class="tab-pane fade" id="illustration">
+					  		<img src="image/kitchen1.png" alt="kitchen1">
+					  	</div>
+					  	<div role="tabpanel" class="tab-pane fade" id="motion">
+					  		<img src="image/banks.png" alt="banks">
+					  	</div>
 					</div>
 				</div>	
+		  	</section>
+		  	<section class="team">
+		  		<h3>Team</h3>
+		  		<ul class="list-team">
+		  			<li>
+		  			<div class="image-team">
+		  				<img src="image/cosmo.png" alt="cosmo">
+		  			</div>
+		  				<h2>Kosmo Kramer</h2>
+		  				<span>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor.</span>
+		  				<a href="http://twitter.com" target=_blank">
+		  					<img src="image/twitter.png" alt="twitter">
+		  				</a>
+		  				<a href="https://www.instagram.com" target=_blank">
+		  					<img src="image/instagram.png" alt="instagram" class="instagram-team">
+		  				</a>
+		  			</li>
+		  			<li>
+		  			<div class="image-team">
+		  				<img src="image/george.png" alt="george">
+		  			</div>
+		  				<h2>George Constanza</h2>
+		  				<span>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor.</span>
+		  				<a href="http://twitter.com" target=_blank">
+		  					<img src="image/twitter.png" alt="twitter">
+		  				</a>
+		  			</li>
+		  		</ul>
 		  	</section>
 		
 
