add other section

--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
 		  			</div>
 		  				<h2>Kosmo Kramer</h2>
 		  				<span>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor.</span>
-		  				<a href="http://twitter.com" target=_blank">
+		  				<a href="http://www.twitter.com" target="blank">
 		  					<img src="image/twitter.png" alt="twitter">
 		  				</a>
-		  				<a href="https://www.instagram.com" target=_blank">
-		  					<img src="image/instagram.png" alt="instagram" class="instagram-team">
+		  				<a href="https://www.instagram.com" target="blank">
+		  					<img src="image/instagram.png" alt="instagram">
 		  				</a>
 		  			</li>
 		  			<li>
@@ -167,21 +167,52 @@
 		  			</div>
 		  				<h2>George Constanza</h2>
 		  				<span>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor.</span>
-		  				<a href="http://twitter.com" target=_blank">
+		  				<a href="http://www.twitter.com" target="blank">
 		  					<img src="image/twitter.png" alt="twitter">
 		  				</a>
 		  			</li>
 		  		</ul>
 		  	</section>
-		
-
-
-
-
-
-
-
-
+		  	<section class="contact">
+		  		<h3>Contact</h3>
+		  			<p>Please contact us and we can discuss work!</p>
+		  	<div class="form-contact">
+			  	<form name="contact" method="post" action="#">
+			  		<p><label for="name"></label><input type="text" name="name" placeholder="Name"></p>
+			  		<p><label for="email"></label><input type="email" name="email" placeholder="Email"></p>
+			  		<p><textarea rows="4" name="text" placeholder="Message"></textarea></p>
+			  		<p class="button"><input class="button-submite" type="submit" name="Submit" value="Submit" /></p>
+			  	</form>
+		  	</div>
+		  	<dl class="adress-contact">
+			  	<dt>Adress</dt>
+			  	<dd>129 West 81st Street New York, NY 10024</dd>
+			  	<dt>Email</dt>
+			  	<dd>giddyup@kramer.com</dd>
+			  	<dt>Phone</dt>
+			  	<dd>+1 212-532-1256</dd>
+		  	</dl>
+  		   </section>
+  		   <footer class="footer">
+  		   	<div>
+  		    	<img src="image/logo.png" alt="logo-header" class="footer-logo">
+  		    </div>
+  		      	<div class="footer-information">
+  		    		<p>129 West 81st Street<br /> New York, NY 10024</p>
+  		    		<p>giddyup@kramer.com <br />+1 212-532-1256</p>
+	 		    	<div class="footer-image">
+	  		    		<a href="http://www.twitter.com" target="blank">
+			  				<img src="image/twitter.png" alt="twitter">
+			  			</a>
+			  			<a href="http://www.twitter.com" target="blank">
+			  				<img src="image/facebook.png" alt="twitter">
+			  			</a>
+			  			<a href="https://www.instagram.com" target="blank">
+			  				<img src="image/instagram.png" alt="instagram">
+			  			</a>
+	  		    	</div>
+  		    	</div>
+  		   	</footer>
 	</div>
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="jquery-1.12.4.min.js"></script>
