--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 						</ul>
 					</nav>
 						<span class="big-text">Welcome To <br /> Kramerica Industries</span>
-				<div class="button-circle">
+				<a class="button-circle" href="#about">
 					<span class="button-arrow">V</span>
 					<span class="button-text">Explore</span>
-				</div>
+				</a>
 		  	</header>
-		  	<section class="services">
+		  	<section class="services" id="about">
 		  			<h3>About</h3>
 		  		<div class="text-services-about">
 			  		<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit</p>
